--- a/AdminAutomationExample/config.json
+++ b/AdminAutomationExample/config.json
@@ -1,4 +1,4 @@
 {
-    "username": "Jared.Fishman@dataprise.com",
-    "password": "Wootton17"
+    "username": "YourUsername",
+    "password": "YourPassword"
 }
