--- a/AdminAutomationExample/NewWeek.toml
+++ b/AdminAutomationExample/NewWeek.toml
@@ -1,28 +1,28 @@
-Railroad = 'CN'
-Title = '20180629'
-CarsOnLine_ByCarOwner_System = 38847
-CarsOnLine_ByCarOwner_ForeignRR = 16870
-CarsOnLine_ByCarOwner_Private = 90431
-CarsOnLine_ByCarType_Box = 10311
-CarsOnLine_ByCarType_CoveredHopper = 51450
-CarsOnLine_ByCarType_Gondola = 7826
-CarsOnLine_ByCarType_IntermodalCar = 8623
-CarsOnLine_ByCarType_MultilevelCar = 6967
-CarsOnLine_ByCarType_OpenHopper = 10925
-CarsOnLine_ByCarType_Tank = 39092
-CarsOnLine_ByCarType_Other = 10954
-TrainSpeed_ByTrainType_IntermodalTrain = 28.8
-TrainSpeed_ByTrainType_Manifest = 24.3
-TrainSpeed_ByTrainType_CoalUnit = 24.8
-TrainSpeed_ByTrainType_GrainUnit = 23.5
-TrainSpeed_ByTrainType_AllTrains = 25.7
-TerminalDwell_HarrisonYard = 23.9
-TerminalDwell_FDLYard = 29
-TerminalDwell_JacksonYard = 15.3
-TerminalDwell_MacMillanYard = 21.6
-TerminalDwell_MarkhamYard = 9.1
-TerminalDwell_SymingtonYard = 25
-TerminalDwell_TascherauYard = 12.8
-TerminalDwell_ThorntonYard = 11.8
-TerminalDwell_WalkerYard = 21.9
-TerminalDwell_EntireRailroad = 16.4
+Railroad = ''
+Title = ''
+CarsOnLine_ByCarOwner_System = 
+CarsOnLine_ByCarOwner_ForeignRR = 
+CarsOnLine_ByCarOwner_Private = 
+CarsOnLine_ByCarType_Box = 
+CarsOnLine_ByCarType_CoveredHopper = 
+CarsOnLine_ByCarType_Gondola = 
+CarsOnLine_ByCarType_IntermodalCar = 
+CarsOnLine_ByCarType_MultilevelCar = 
+CarsOnLine_ByCarType_OpenHopper = 
+CarsOnLine_ByCarType_Tank = 
+CarsOnLine_ByCarType_Other = 
+TrainSpeed_ByTrainType_IntermodalTrain = 
+TrainSpeed_ByTrainType_Manifest = 
+TrainSpeed_ByTrainType_CoalUnit = 
+TrainSpeed_ByTrainType_GrainUnit = 
+TrainSpeed_ByTrainType_AllTrains = 
+TerminalDwell_HarrisonYard = 
+TerminalDwell_FDLYard = 
+TerminalDwell_JacksonYard = 
+TerminalDwell_MacMillanYard = 
+TerminalDwell_MarkhamYard = 
+TerminalDwell_SymingtonYard = 
+TerminalDwell_TascherauYard = 
+TerminalDwell_ThorntonYard = 
+TerminalDwell_WalkerYard = 
+TerminalDwell_EntireRailroad = 
