--- a/AdminAutomationExample/package.json
+++ b/AdminAutomationExample/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "netlify-auto-pub",
+  "name": "aar-rpm-publish",
   "version": "1.0.0",
-  "description": "",
+  "description": "Automate Weekly RPM Data Upload",
   "main": "index.js",
   "scripts": {
-    "cy-open": "cypress open"
+    "cy-open": "cypress open",
+    "upload": "cypress run"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Association of American Railroads",
+  "license": "MIT",
   "devDependencies": {
-    "cypress": "^3.0.1"
+    "cypress": "^3.0.1",
+    "eslint": "^5.0.1",
+    "eslint-plugin-prettier": "^2.6.1",
+    "prettier": "^1.13.6"
   }
 }
