--- a/AdminAutomationExample/sample-data-files/SampleAOR.toml
+++ b/AdminAutomationExample/sample-data-files/SampleAOR.toml
@@ -1,5 +1,5 @@
 Railroad = 'AOR'
-Title = '20170407'
+WeekEnding = '20170407'
 CarsOnLine_ByCarOwner_System = 108022
 CarsOnLine_ByCarOwner_ForeignRR = 115555
 CarsOnLine_ByCarOwner_Private = 479657
