--- a/AdminAutomationExample/sample-data-files/SampleBNSF.toml
+++ b/AdminAutomationExample/sample-data-files/SampleBNSF.toml
@@ -1,16 +1,5 @@
 Railroad = 'BNSF'
-Title = '20170407'
-CarsOnLine_ByCarOwner_System = 64841
-CarsOnLine_ByCarOwner_ForeignRR = 22690
-CarsOnLine_ByCarOwner_Private = 153899
-CarsOnLine_ByCarType_Box = 11689
-CarsOnLine_ByCarType_CoveredHopper = 75573
-CarsOnLine_ByCarType_Gondola = 8376
-CarsOnLine_ByCarType_IntermodalCar = 17495
-CarsOnLine_ByCarType_MultilevelCar = 9571
-CarsOnLine_ByCarType_OpenHopper = 55870
-CarsOnLine_ByCarType_Tank = 52619
-CarsOnLine_ByCarType_Other = 10237
+WeekEnding = '20170407'
 TrainSpeed_ByTrainType_IntermodalTrain = 31.8
 TrainSpeed_ByTrainType_Manifest = 20.1
 TrainSpeed_ByTrainType_MultilevelTrain = 24.6
