--- a/AdminAutomationExample/sample-data-files/SampleCN.toml
+++ b/AdminAutomationExample/sample-data-files/SampleCN.toml
@@ -1,24 +1,12 @@
 Railroad = 'CN'
-Title = '20170407'
-CarsOnLine_ByCarOwner_System = 38958
-CarsOnLine_ByCarOwner_ForeignRR = 15896
-CarsOnLine_ByCarOwner_Private = 89969
-CarsOnLine_ByCarType_Box = 10478
-CarsOnLine_ByCarType_CoveredHopper = 51120
-CarsOnLine_ByCarType_Gondola = 7592
-CarsOnLine_ByCarType_IntermodalCar = 8686
-CarsOnLine_ByCarType_MultilevelCar = 6164
-CarsOnLine_ByCarType_OpenHopper = 11107
-CarsOnLine_ByCarType_Tank = 39214
-CarsOnLine_ByCarType_Other = 10462
+WeekEnding = '20170407'
 TrainSpeed_ByTrainType_IntermodalTrain = 28.4
 TrainSpeed_ByTrainType_Manifest = 24.5
-
 TrainSpeed_ByTrainType_CoalUnit = 24.6
 TrainSpeed_ByTrainType_GrainUnit = 22.3
 TrainSpeed_ByTrainType_AllTrains = 25.6
-TerminalDwell_HarrisonYard = 22.5
 TerminalDwell_FDLYard = 21.7
+TerminalDwell_HarrisonYard = 22.5
 TerminalDwell_JacksonYard = 13.3
 TerminalDwell_MacMillanYard = 19
 TerminalDwell_MarkhamYard = 13.3
