--- a/AdminAutomationExample/sample-data-files/SampleNS.toml
+++ b/AdminAutomationExample/sample-data-files/SampleNS.toml
@@ -1,16 +1,5 @@
 Railroad = 'NS'
-Title = '20170407'
-CarsOnLine_ByCarOwner_System = 51192
-CarsOnLine_ByCarOwner_ForeignRR = 28011
-CarsOnLine_ByCarOwner_Private = 106284
-CarsOnLine_ByCarType_Box = 14825
-CarsOnLine_ByCarType_CoveredHopper = 48873
-CarsOnLine_ByCarType_Gondola = 16484
-CarsOnLine_ByCarType_IntermodalCar = 10320
-CarsOnLine_ByCarType_MultilevelCar = 10535
-CarsOnLine_ByCarType_OpenHopper = 39463
-CarsOnLine_ByCarType_Tank = 37022
-CarsOnLine_ByCarType_Other = 7965
+WeekEnding = '20170407'
 TrainSpeed_ByTrainType_IntermodalTrain = 27.3
 TrainSpeed_ByTrainType_Manifest = 18.9
 TrainSpeed_ByTrainType_MultilevelTrain = 20.6
@@ -18,6 +7,7 @@ TrainSpeed_ByTrainType_CoalUnit = 16.3
 TrainSpeed_ByTrainType_GrainUnit = 16.5
 TrainSpeed_ByTrainType_AllTrains = 21
 TerminalDwell_Allentown = 26.8
+TerminalDwell_Atlanta = 12.8
 TerminalDwell_Bellevue = 32.4
 TerminalDwell_Birmingham = 40.2
 TerminalDwell_Chattanooga = 49.7
@@ -25,7 +15,6 @@ TerminalDwell_Columbus = 30.3
 TerminalDwell_Conway = 26.4
 TerminalDwell_Decatur = 23.9
 TerminalDwell_Elkhart = 38.9
-TerminalDwell_Atlanta = 12.8
 TerminalDwell_Linwood = 31.3
 TerminalDwell_Macon = 29.3
 TerminalDwell_NewOrleans = 18.2
