--- a/AdminAutomationExample/sample-data-files/SampleUP.toml
+++ b/AdminAutomationExample/sample-data-files/SampleUP.toml
@@ -1,16 +1,5 @@
 Railroad = 'UP'
-Title = '20170407'
-CarsOnLine_ByCarOwner_System = 55309
-CarsOnLine_ByCarOwner_ForeignRR = 37365
-CarsOnLine_ByCarOwner_Private = 204422
-CarsOnLine_ByCarType_Box = 21887
-CarsOnLine_ByCarType_CoveredHopper = 113720
-CarsOnLine_ByCarType_Gondola = 11101
-CarsOnLine_ByCarType_IntermodalCar = 14728
-CarsOnLine_ByCarType_MultilevelCar = 12888
-CarsOnLine_ByCarType_OpenHopper = 40970
-CarsOnLine_ByCarType_Tank = 68002
-CarsOnLine_ByCarType_Other = 13800
+WeekEnding = '20170407'
 TrainSpeed_ByTrainType_IntermodalTrain = 29.6
 TrainSpeed_ByTrainType_Manifest = 22.3
 TrainSpeed_ByTrainType_MultilevelTrain = 24.8
