Complete working example of C.O.L. EDI

--- a/AdminAutomationExample/NewWeek.toml
+++ b/AdminAutomationExample/NewWeek.toml
@@ -1,17 +1,73 @@
-Railroad = ''
-WeekEnding = ''
-TrainSpeed_ByTrainType_IntermodalTrain = 
-TrainSpeed_ByTrainType_Manifest = 
-TrainSpeed_ByTrainType_CoalUnit = 
-TrainSpeed_ByTrainType_GrainUnit = 
-TrainSpeed_ByTrainType_AllTrains = 
-TerminalDwell_FDLYard = 
-TerminalDwell_HarrisonYard = 
-TerminalDwell_JacksonYard = 
-TerminalDwell_MacMillanYard = 
-TerminalDwell_MarkhamYard = 
-TerminalDwell_SymingtonYard = 
-TerminalDwell_TascherauYard = 
-TerminalDwell_ThorntonYard = 
-TerminalDwell_WalkerYard = 
-TerminalDwell_EntireRailroad = 
+WeekEnding = '20190102'
+
+BNSF_CarsOnLine_ByCarOwner_System = 108022
+BNSF_CarsOnLine_ByCarOwner_ForeignRR = 115555
+BNSF_CarsOnLine_ByCarOwner_Private = 479657
+BNSF_CarsOnLine_ByCarType_Box = 55595
+BNSF_CarsOnLine_ByCarType_CoveredHopper = 234590
+BNSF_CarsOnLine_ByCarType_Gondola = 45980
+BNSF_CarsOnLine_ByCarType_IntermodalCar = 15386
+BNSF_CarsOnLine_ByCarType_MultilevelCar = 22049
+BNSF_CarsOnLine_ByCarType_OpenHopper = 99621
+BNSF_CarsOnLine_ByCarType_Tank = 203334
+BNSF_CarsOnLine_ByCarType_Other = 26679
+
+CN_CarsOnLine_ByCarOwner_System = 108011
+CN_CarsOnLine_ByCarOwner_ForeignRR = 111111
+CN_CarsOnLine_ByCarOwner_Private = 479657
+CN_CarsOnLine_ByCarType_Box = 11595
+CN_CarsOnLine_ByCarType_CoveredHopper = 234590
+CN_CarsOnLine_ByCarType_Gondola = 45980
+CN_CarsOnLine_ByCarType_IntermodalCar = 15386
+CN_CarsOnLine_ByCarType_MultilevelCar = 11049
+CN_CarsOnLine_ByCarType_OpenHopper = 99621
+CN_CarsOnLine_ByCarType_Tank = 203334
+CN_CarsOnLine_ByCarType_Other = 26679
+
+KCS_CarsOnLine_ByCarOwner_System = 108033
+KCS_CarsOnLine_ByCarOwner_ForeignRR = 113333
+KCS_CarsOnLine_ByCarOwner_Private = 479657
+KCS_CarsOnLine_ByCarType_Box = 33595
+KCS_CarsOnLine_ByCarType_CoveredHopper = 234590
+KCS_CarsOnLine_ByCarType_Gondola = 45980
+KCS_CarsOnLine_ByCarType_IntermodalCar = 15386
+KCS_CarsOnLine_ByCarType_MultilevelCar = 33049
+KCS_CarsOnLine_ByCarType_OpenHopper = 99621
+KCS_CarsOnLine_ByCarType_Tank = 203334
+KCS_CarsOnLine_ByCarType_Other = 26679
+
+NS_CarsOnLine_ByCarOwner_System = 108044
+NS_CarsOnLine_ByCarOwner_ForeignRR = 114444
+NS_CarsOnLine_ByCarOwner_Private = 479657
+NS_CarsOnLine_ByCarType_Box = 44595
+NS_CarsOnLine_ByCarType_CoveredHopper = 234590
+NS_CarsOnLine_ByCarType_Gondola = 45980
+NS_CarsOnLine_ByCarType_IntermodalCar = 15386
+NS_CarsOnLine_ByCarType_MultilevelCar = 44049
+NS_CarsOnLine_ByCarType_OpenHopper = 99621
+NS_CarsOnLine_ByCarType_Tank = 203334
+NS_CarsOnLine_ByCarType_Other = 26679
+
+UP_CarsOnLine_ByCarOwner_System = 108055
+UP_CarsOnLine_ByCarOwner_ForeignRR = 116666
+UP_CarsOnLine_ByCarOwner_Private = 479657
+UP_CarsOnLine_ByCarType_Box = 66595
+UP_CarsOnLine_ByCarType_CoveredHopper = 234590
+UP_CarsOnLine_ByCarType_Gondola = 45980
+UP_CarsOnLine_ByCarType_IntermodalCar = 15386
+UP_CarsOnLine_ByCarType_MultilevelCar = 55049
+UP_CarsOnLine_ByCarType_OpenHopper = 99621
+UP_CarsOnLine_ByCarType_Tank = 203334
+UP_CarsOnLine_ByCarType_Other = 26679
+
+AOR_CarsOnLine_ByCarOwner_System = 108066
+AOR_CarsOnLine_ByCarOwner_ForeignRR = 117777
+AOR_CarsOnLine_ByCarOwner_Private = 479657
+AOR_CarsOnLine_ByCarType_Box = 77595
+AOR_CarsOnLine_ByCarType_CoveredHopper = 234590
+AOR_CarsOnLine_ByCarType_Gondola = 45980
+AOR_CarsOnLine_ByCarType_IntermodalCar = 15386
+AOR_CarsOnLine_ByCarType_MultilevelCar = 66049
+AOR_CarsOnLine_ByCarType_OpenHopper = 99621
+AOR_CarsOnLine_ByCarType_Tank = 203334
+AOR_CarsOnLine_ByCarType_Other = 26679
